Implement Article resources
- add Flyway database schema migration;
- add CRUD API for articles/ resource;
- refactor existing code;